<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome to the best Othello game eva!</string>
    <string name="app_name">Othello-315</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="choose_diff">Choose a Difficulty:</string>
    <string name="diff_easy">Easy</string>
    <string name="diff_med">Medium</string>
    <string name="diff_hard">Hard</string>
    <string name="choose_color">Choose a Color:</string>
    <string name="color_blk">Black</string>
    <string name="color_white">White</string>
	<string name="start_label">BEGIN</string>
	<string name="quit_label">QUIT</string>
	<string name="hint_label">HINT</string>
	<string name="about_content">This version of Othello has been created by Dylan McDougall, Sam Stewart, and Stephen Ten Eyck. Othello is a game of strategery. </string>
	<string name="view_button">View High Scores!</string>
	<string name="score_title">High Scores:</string>
	<string name="undo_label">UNDO</string>
	<string name="redo_label">REDO</string>
	<string name="error_title">ERRRRRROOOOORRRR!!!</string>
    
</resources>