<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="horizontal" xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/transparent" />

        <TextView
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hello"
            android:textSize="24.5dip" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/transparent" />

        <TextView
            android:id="@+id/diffChoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_diff"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/diffGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/diff_easy" />

            <RadioButton
                android:id="@+id/radioMed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diff_med" />

            <RadioButton
                android:id="@+id/radioHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diff_hard" />
        </RadioGroup>

        <TextView
            android:id="@+id/colorChoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_color"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/colorGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/color_blk" />

            <RadioButton
                android:id="@+id/radioWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_white" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:background="@color/transparent" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:text="@string/start_label" />

        <Button
            android:id="@+id/about_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.27"
            android:text="@string/about_label" />

        <Button
            android:id="@+id/highScore"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.39"
            android:text="@string/view_button" />

    </LinearLayout>

</LinearLayout>